src/objects/Opportunity_Product_History__c.object
<CustomObject>
    <fields>
        <fullName>Ingredient__c</fullName>
        <formula>Opportunity_Product__r.PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Recorded_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Recorded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Product</label>
        <referenceTo>OpportunityLineItem</referenceTo>
        <relationshipLabel>Opportunity Product History</relationshipLabel>
        <relationshipName>Opportunity_Product_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ingredient History Tracking</relationshipLabel>
        <relationshipName>Opportunity_Product_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio__c</fullName>
        <label>Ratio</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Product History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>